template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: AWS CloudFormation template to create a new ECS Fargate First Run stack
Parameters:
  StreamJson:
    Description: Should kinesis messages be JSON formatted
    Type: String
    Default: 'true'
  StreamCompress:
    Description: Should kinesis messages be compressed
    Type: String
    Default: 'false'
  ECRRepositoryName:
    Description: Where this pipeline should store built artifacts
    Type: String

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.76.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-vpc'
        
  SwimSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allow connections from specified CIDR ranges
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: -1
        CidrIp: 10.76.3.0/24
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.76.3.0/24
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-public-subnet'

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-internet-gateway'

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  SwimIngestKinesisStream: 
    Type: AWS::Kinesis::Stream 
    Properties: 
      RetentionPeriodHours: 24 
      ShardCount: 3 

  SwimIngestECSServiceRole:
    Type: AWS::IAM::Role
    Properties:
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy'
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Action: sts:AssumeRole
          Effect: Allow
          Principal:
            Service: ecs-tasks.amazonaws.com
      Path: /
      Policies:
        - PolicyName: ECSAccessParameters
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Action:
                - 'ssm:GetParameters'
                Effect: Allow
                Resource: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/poc/swim*'
        - PolicyName: ECSWriteKinesis
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Action:
                - 'kinesis:PutRecord'
                Effect: Allow
                Resource: !GetAtt SwimIngestKinesisStream.Arn

#  SwimIngestECRRepository:
#    Type: AWS::ECR::Repository
#    Properties: 
#      LifecyclePolicy: 
#        LifecyclePolicy
##      RepositoryName: String
#      RepositoryPolicyText: Json
    
  SwimIngestECSCluster:
    Type: AWS::ECS::Cluster
    
  FDPSSwimIngestTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties: 
      RequiresCompatibilities: 
        - 'FARGATE'
      ContainerDefinitions: 
        - Name: !Join ['-', [!Ref 'AWS::StackName', 'Container']]
          Image: !Ref ECRRepositoryName
          Essential: 'true'
#          Memory: '300'
          LogConfiguration:
            LogDriver: 'awslogs'
            Options:
              awslogs-group: !Sub '/ecs/bkl-test'
              awslogs-region: !Sub '${AWS::Region}'
              awslogs-stream-prefix: 'ecs'
          Environment:
            - Name: AWS_KINESIS_STREAM
              Value: !Ref SwimIngestKinesisStream
            - Name: AWS_KINESIS_STREAM_JSON
              Value: !Sub StreamJson
            - Name: AWS_KINESIS_STREAM_COMPRESS
              Value: !Sub StreamCompress
          Secrets:
            - Name: SWIM_JNDI_CONTEXT_FACTORY
              ValueFrom: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/poc/swim/fdps/jndi/context_factory'
            - Name: SWIM_JNDI_HOST
              ValueFrom: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/poc/swim/fdps/jndi/host'
            - Name: SWIM_JNDI_PRINCIPAL
              ValueFrom: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/poc/swim/fdps/jndi/principal'
            - Name: SWIM_JNDI_CREDENTIALS
              ValueFrom: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/poc/swim/fdps/jndi/credentials'
            - Name: SWIM_JNDI_VPN
              ValueFrom: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/poc/swim/fdps/jndi/vpn'
            - Name: SWIM_JMS_CONNECTION_FACTORY_NAME
              ValueFrom: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/poc/swim/fdps/jms/connection_factory_name'
            - Name: SWIM_JMS_QUEUE_NAME
              ValueFrom: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/poc/swim/fdps/jms/queue_name'
#            - Name: SWIM_JNDI_CONTEXT_FACTORY
#              ValueFrom: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/poc/swim/stdds/smes/jndi/context_factory'
#            - Name: SWIM_JNDI_HOST
#              ValueFrom: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/poc/swim/stdds/smes/jndi/host'
#            - Name: SWIM_JNDI_PRINCIPAL
#              ValueFrom: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/poc/swim/stdds/smes/jndi/principal'
#            - Name: SWIM_JNDI_CREDENTIALS
#              ValueFrom: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/poc/swim/stdds/smes/jndi/credentials'
#            - Name: SWIM_JNDI_VPN
#              ValueFrom: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/poc/swim/stdds/smes/jndi/vpn'
#            - Name: SWIM_JMS_CONNECTION_FACTORY_NAME
#              ValueFrom: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/poc/swim/stdds/smes/jms/connection_factory_name'
#            - Name: SWIM_JMS_QUEUE_NAME
#              ValueFrom: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/poc/swim/stdds/smes/jms/queue_name'
      TaskRoleArn: !Ref SwimIngestECSServiceRole
      ExecutionRoleArn: !Ref SwimIngestECSServiceRole
      Memory: '3GB'
      Cpu: '1 vCPU'
      NetworkMode: 'awsvpc'

  FDPSSwimIngestService:
    Type: AWS::ECS::Service
    Properties: 
      Cluster: !Ref SwimIngestECSCluster
      LaunchType: 'FARGATE'
      TaskDefinition: !Ref FDPSSwimIngestTaskDefinition
      ServiceName: !Sub 'fdps-swim-ingest-service'
      DesiredCount: 1
      DeploymentController: 
        Type: 'ECS'
      NetworkConfiguration: 
        AwsvpcConfiguration:
          AssignPublicIp: 'ENABLED'
          Subnets: 
            - !Ref PublicSubnet
          SecurityGroups: 
            - !Ref SwimSecurityGroup
            

Outputs:
  KinesisStream:
    Description: The kinesis stream to be consumed
    Value: !GetAtt SwimIngestKinesisStream.Arn 
    Export:
      Name: !Sub '${AWS::StackName}-KinesisStream'
